tests/invalid/action_buttons/array_wrong_arguments_type.fixture
/action buttons: type must be object.
Line 3
/action buttons: oneOf must match exactly one schema in oneOf.
Line 3
/action buttons/0/arguments: type must be object.
Line 6